--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,12 +23,14 @@ header{
   }
   @include media($tablet) {
     h1{
-      @include span-columns(3);
+      @include span-columns(3 of 8);
+      height: 100%;
     }
     h2{
-display: block;
-      @include span-columns(5);
-      text-align: right;
+      height: 100%;
+      @include span-columns(5 of 8);
+
+
     }
   }
 
@@ -60,16 +62,23 @@ section{
   }
 }
 #slider{
-  @include span-columns(4);
-ul {
-  list-style: none;
-  padding-left: 0px;
-}
+  display: none;
+  @include media($tablet) {
+    @include span-columns(8)
+  }
+  @include media($desktop) {
+    @include span-columns(10)
+  }
   li {
-    display: none;
+    visibility: hidden;
+    height: 0;
+    width: 0;
+    @include transition(all 1.0s ease-in-out);
+
     &.active{
+      height: auto;
+      visibility: visible;
       display: inline-block;
-      width: 33%;
       img{
         height: 200px;
         width: 100%;
@@ -77,6 +86,36 @@ ul {
       }
     }
   }
+ul {
+  list-style: none;
+  padding-left: 0;
+  &.item-1{
+    li.active {
+      width: 100%!important;
+    }
+  }
+  &.item-2{
+    li.active {
+      width: 45%!important;
+    }
+  }
+  &.item-3{
+    li.active{
+      width: 30%!important;
+    }
+  }
+  &.item-4{
+    li.active{
+      width: 23%!important;
+    }
+  }
+  &.item-5{
+    li.active{
+    width: 18%!important;
+  }}
+
+}
+
 }
 #products {
   div{
