backgorund color change

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,7 +2,7 @@
 @import "grid-settings";
 @import "neat/neat";
 @import url(http://fonts.googleapis.com/css?family=Playfair+Display+SC&subset=latin,latin-ext);
-$background: #1f073e;
+$background: #0B0217;
 $font: #9b9f9f;
 
 
